@@ -18,14 +18,19 @@
 #' @param orderSamples A predefined order in which the samples will be plotted.
 #'   Otherwise the order will be found internally by aligning the clusters
 #'   (assuming \code{input="clusters"})
-#' @param sampleData If \code{clusters} is a matrix, \code{sampleData} gives a
-#'   matrix of additional cluster/sampleData on the samples to be plotted with
-#'   the clusterings given in clusters. Values in \code{sampleData} will be
-#'   added to the end (bottom) of the plot. If \code{clusters} is a
-#'   \code{ClusterExperiment} object, \code{sampleData} must be either an index
-#'   or a character vector that references a column or column name,
-#'   respectively, of the \code{colData} slot of the \code{ClusterExperiment}
-#'   object.
+#' @param sampleData If \code{clusters} is a matrix, \code{sampleData} gives a 
+#'   matrix of additional cluster/sampleData on the samples to be plotted with 
+#'   the clusterings given in clusters. Values in \code{sampleData} will be 
+#'   added to the end (bottom) of the plot. NAs in the \code{sampleData} matrix
+#'   will trigger an error. If \code{clusters} is a \code{ClusterExperiment}
+#'   object, the input in \code{sampleData} refers to columns of the the
+#'   \code{colData} slot of the \code{ClusterExperiment} object to be plotted
+#'   with the clusters. In this case, \code{sampleData} can be TRUE (i.e. all
+#'   columns will be plotted), or an index or a character vector that references
+#'   a column or column name, respectively, of the \code{colData} slot of the
+#'   \code{ClusterExperiment} object. If there are NAs in the \code{colData}
+#'   columns, they will be encoded as 'unassigned' and receive the same color as
+#'   'unassigned' samples in the clustering.
 #' @param reuseColors Logical. Whether each row should consist of the same set
 #'   of colors. By default (FALSE) each cluster that the algorithm doesn't
 #'   identify to the previous rows clusters gets a new color.
@@ -213,7 +218,8 @@ setMethod(
                         resetNames=FALSE,resetColors=FALSE,resetOrderSamples=FALSE,sampleData=NULL,...)
   {
     existingColors<-match.arg(existingColors)
-    sampleData<-.pullSampleData(clusters,sampleData)
+    sampleData<-.pullSampleData(clusters,sampleData,fixNA="unassigned")
+#	browser()
     if(existingColors!="ignore") useExisting<-TRUE else useExisting<-FALSE
     if(useExisting){ #using existing colors in some way:
         args<-list(...)
